--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: Goran Perisic # the main title
 
-tagline: Transitioning to DataSceience - Bulding ML models with Python and Business Acumen # it will display as the sub-title
+tagline: Transitioning to DataScience - Bulding ML models with Python and Business Acumen # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
