--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ social:
     - https://github.com/ArgonIntel # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-     - https://www.linkedin.com/in/goranperisic-argon/
+    - https://www.linkedin.com/in/goranperisic-argon/
 
 # Site Verification Settings
 webmaster_verifications:
@@ -100,7 +100,7 @@ avatar:
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: https://media.licdn.com/dms/image/D4D16AQG7n9Bcu_Okbw/profile-displaybackgroundimage-shrink_350_1400/0/1719146101778?e=1724889600&v=beta&t=JB7ipCi-4WFuHVTih7forp3tMWv33g_ZfyKo36CzqXI # string, local or CORS resources
+social_preview_image: # https://media.licdn.com/dms/image/D4D16AQG7n9Bcu_Okbw/profile-displaybackgroundimage-shrink_350_1400/0/1719146101778?e=1724889600&v=beta&t=JB7ipCi-4WFuHVTih7forp3tMWv33g_ZfyKo36CzqXI # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
